<resources>
    <!-- Settings -->
    <string name="settings_enable_in_ups_mode">settings_enable_in_ups_mode</string>
    <string name="settings_send_low_battery_warnings">settings_send_low_battery_warnings</string>
    <string name="settings_send_charging_stopped_warnings">settings_send_charging_stopped_warnings</string>

    <string name="send_low_battery_warnings">Send low battery warning</string>
    <string name="send_low_battery_warnings_summary">Send an SMS to the given number when battery is low.</string>
    <string name="send_charging_stopped_warnings">Send charging stopped warning</string>
    <string name="send_charging_stopped_warnings_summary">Send an SMS to the given number when charging stopped.</string>

    <string name="app_name">Locate driver</string>
    <string name="current_state_card_title">Setup</string>
    <string name="settings_card_title">Settings</string>
    <string name="about_card_title">About</string>
    <string name="destination">Pick destination</string>
    <string name="keyword">SMS Keyword:</string>
    <string name="phone_number">Phone number for battery warnings</string>
    <string name="charging_stopped">Charging stopped</string>
    <string name="charging_stopped_x_remaining">Charging stopped: %1$d %% remaining</string>
    <string name="low_battery">Low battery</string>
    <string name="low_battery_x_remaining">Low battery: %1$d %% remaining</string>
    <string name="destination_error">Error choosing destination :(</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="error_no_keyword">You can\'t start the application without a keyword.</string>
    <string name="send_button">Send location</string>
    <string name="about_text">An Open Source application that automatically shares your location while you drive based on SMS available on Github:\nhttps://github.com/micku7zu/Locate-driver\n\nCopyright © Sergiu Șandor 2016.</string>
    <string name="error_permission">Application needs all the permissions to be granted because without them it can\'t function correctly.</string>
    <string name="sound_title">Sound (not yet)</string>
    <string name="sound_summary">Notification when keyword was detected.</string>
    <string name="ultra_power_saving_mode">Ultra power saving mode</string>
    <string name="ultra_power_saving_mode_summary">Enable the app to run in ultra power saving mode (may not work on all devices)</string>
    <string name="detected_message_title">First message</string>
    <string name="detected_message_summary">Acknowledge that keyword was detected and send mobile data and GPS status.</string>
    <string name="gps_message_title">Second message</string>
    <string name="gps_message_summary">GPS informations: Accuracy, Latitude, Longitude, Speed, Altitude.</string>
    <string name="google_message_title">Third message</string>
    <string name="google_message_summary">Google maps link with your current location.</string>
    <string name="network_message_title">Forth message</string>
    <string name="network_message_summary">Informations about current address and remaining distance to destination.</string>
    <string name="acknowledgeMessage">Wait max 60 seconds for response.</string>
    <string name="network">Internet:</string>
    <string name="gps">GPS:</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="location_mode_off">Disabled</string>
    <string name="location_battery_saving">Approximate</string>
    <string name="locateion_sensors_only">GPS only</string>
    <string name="location_high_accuracy">GPS and Network</string>
    <string name="accuracy">Accuracy:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="speed">Speed:</string>
    <string name="no_network">Internet is disabled, can\'t get address or distance.</string>
    <string name="address">Address:</string>
    <string name="no_destination">No destination set.</string>
    <string name="remaining_distance_to">Distance to</string>
    <string name="aprox_duration">Aproximative time left</string>
    <string name="error_getting_location">Error. Can\'t get the location.</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="are_you_sure">Are you sure you want to send your location to</string>
    <string name="approximate">Approximate</string>
    <string name="accurate">Accurate</string>
    <string name="no_speed_or_altitude">No speed or altitude.</string>
    <string name="settings_kmh_or_mph_string">Speed unit settings</string>
    <string name="read_contacts_permission">Can\'t select a contact without Read Contacts permission.</string>
    <string name="send_sms_and_location_permission">SMS and Location permission needed.</string>
    <string name="notification_title">Locate driver not working</string>
    <string name="notification_content">SMS and Location permissions needed.</string>
</resources>
