<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="settings_kmh_or_mph"
        android:title="@string/settings_kmh_or_mph_string"
        android:entries="@array/entries_kmh_or_mph"
        android:entryValues="@array/entries_kmh_or_mph_values"
        android:summary="%s"
        android:defaultValue="0" />

    <CheckBoxPreference
        android:key="settings_detected_sms"
        android:title="@string/detected_message_title"
        android:summary="@string/detected_message_summary"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="settings_gps_sms"
        android:title="@string/gps_message_title"
        android:summary="@string/gps_message_summary"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="settings_google_sms"
        android:title="@string/google_message_title"
        android:summary="@string/google_message_summary"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="settings_network_sms"
        android:title="@string/network_message_title"
        android:summary="@string/network_message_summary"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="@string/settings_send_low_battery_warnings"
        android:title="@string/send_low_battery_warnings"
        android:summary="@string/send_low_battery_warnings_summary"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="@string/settings_send_charging_stopped_warnings"
        android:title="@string/send_charging_stopped_warnings"
        android:summary="@string/send_charging_stopped_warnings_summary"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:enabled="false"
        android:key="settings_sound"
        android:title="@string/sound_title"
        android:summary="@string/sound_summary"
        android:defaultValue="false"/>

    <!-- NOTE: If uncommenting this, also uncomment REQUEST_IGNORE_BATTERY_OPTIMIZATIONS
    permission in manifest. It is not used by default as Google Play restricts it -->
    <!--CheckBoxPreference
        android:enabled="true"
        android:key="@string/settings_enable_in_ups_mode"
        android:title="@string/ultra_power_saving_mode"
        android:summary="@string/ultra_power_saving_mode_summary"
        android:defaultValue="false"/-->

</PreferenceScreen>